T Compiler/tests/phase3tests/error/bogusOperators.t
class A {
  int i;
}

int main()
{
  A a;

  a = 17;

  a = 17 + a;

  a = 17 - a;
  
  a = 17 * a;
  
  a = 17 / a;

  a = -a;

  a = !a;

  a = a > 17;

  a = a < 17;

  a = a == 17;

  a = 17 + null;

  a = 17 - null;
  
  a = 17 * null;
  
  a = 17 / null;

  a = -null;

  a = !null;

  a = null > 17;

  a = null < 17;

  a = null == 17;
}
